src/objects/User.object
<CustomObject>
    <fields>
        <fullName>ADP_ID__c</fullName>
        <description>User Id of payroll system ADP</description>
        <label>ADP_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team__c</fullName>
        <description>The team the account manager belongs to.  Use only when the user is an account manager.</description>
        <label>Account Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alpha Real Estate</fullName>
                </value>
                <value>
                    <fullName>Alpha Retail</fullName>
                </value>
                <value>
                    <fullName>Business Starter</fullName>
                </value>
                <value>
                    <fullName>EP Starter</fullName>
                </value>
                <value>
                    <fullName>LLC/INC Business Account Services</fullName>
                </value>
                <value>
                    <fullName>Trademark Account Services</fullName>
                </value>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assistant_Manager_Text__c</fullName>
        <label>Assistant Manager</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>CompanyName</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department2__c</fullName>
        <formula>if( CONTAINS(UserRole.Name, &quot;BIZ&quot;),&quot;Business Services&quot;,if( CONTAINS(UserRole.Name, &quot;Sales&quot;),&quot;Sales&quot;,if(CONTAINS(UserRole.Name, &quot;IP&quot;),&quot;Intellectual Property&quot;,if(CONTAINS(UserRole.Name, &quot;PS&quot;),&quot;Personal Services&quot;,if(CONTAINS(UserRole.Name, &quot;AS&quot;),&quot;Attorney Services&quot;,&quot;none&quot;)))))</formula>
        <label>Department2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Code_Department__c</fullName>
        <formula>CASE( Dept_Code__c, 
110,	&quot;BSI Business Services&quot;, 
120,	&quot;BS Fulfillment Back Ends&quot;, 
130,	&quot;BS Fulfillment Filings&quot;, 
140,	&quot;BS Fulfillment Special Fillings&quot;, 
150,	&quot;Business Customer Support&quot;, 
160,	&quot;BS Fulfillment Holding Area&quot;, 
170,	&quot;Shipping &amp; Receiving&quot;, 
180,	&quot;BS Fulfillment 501c3&quot;, 
185,	&quot;BS Fulfillment RA&quot;, 
190,	&quot;BS Fulfillment Management&quot;, 
200,	&quot;EP Fulfillment Estate Planning&quot;, 
205,	&quot;EP Fulfillment Living Trust&quot;, 
210,	&quot;PS Fulfillment Divorce&quot;, 
215,	&quot;BSI Personal Services&quot;, 
220,	&quot;PS Fulfillment Small Claims&quot;, 
225,	&quot;PS Fulfillment RE Lease&quot;, 
230,	&quot;PS Fulfillment Name Change&quot;, 
235,	&quot;EP-PS Fulfillment Management&quot;, 
305,	&quot;IP Fulfillment Trademark&quot;, 
310,	&quot;BSI Intellectual Property&quot;, 
315,	&quot;IP Fulfillment Management&quot;, 
320,	&quot;IP Fulfillment Patent&quot;, 
325,	&quot;IP Fulfillment Patent Illustration&quot;, 
350,	&quot;IP Fulfillment Copyright&quot;, 
370,	&quot;IP Fulfillment TM Search&quot;, 
410,	&quot;Customer Care BS Mgmt&quot;, 
411,	&quot;Customer Care BS&quot;, 
420,	&quot;Customer Care PS/EP Mgmt&quot;, 
421,	&quot;Customer Care EP&quot;, 
422,	&quot;Customer Care PS&quot;, 
430,	&quot;Customer Care IP Mgmt&quot;, 
431,	&quot;Customer Care IP&quot;, 
450,	&quot;General Customer Care&quot;, 
480,	&quot;Customer Care AS Mgmt&quot;, 
481,	&quot;Customer Care AS&quot;, 
490,	&quot;Customer Care CF Mgmt&quot;, 
491,	&quot;Customer Care CF&quot;, 
500,	&quot;Finance&quot;, 
550,	&quot;Human Resources/Talent Acquisition&quot;, 
560,	&quot;Office Services&quot;, 
600,	&quot;Channel Marketing&quot;, 
610,	&quot;Brand Management&quot;, 
615,	&quot;Product Marketing&quot;, 
700,	&quot;Technology &amp; Development&quot;, 
705,	&quot;Tech FF Allocation&quot;, 
710,	&quot;Tech All Allocation&quot;, 
800,	&quot;Business Development&quot;, 
815,	&quot;Product Management AS&quot;, 
825,	&quot;Recovery - AS&quot;, 
830,	&quot;BSI Attorney Services&quot;, 
900,	&quot;Legal/Product Development&quot;, 
950,	&quot;Legal Architects&quot;, 
1000,	&quot;Executive&quot;, 
1015,	&quot;Fulfillment Management&quot;, 
1020,	&quot;Special Ops&quot;, 
1025,	&quot;Recovery - Core&quot;, 
1030,	&quot;Outbound Sales&quot;, 
1050,	&quot;Product Management Core&quot;, 
1055,	&quot;Research &amp; Development&quot;, 
1060,	&quot;General BSI&quot;, 
1065,	&quot;IP R&amp;D&quot;, 
1070,	&quot;Process Improvement&quot;, 
1075,	&quot;R&amp;D Support &amp; Operations&quot;, 
1080,	&quot;Account Manager - Leadership&quot;, 
1085,	&quot;Account Manager - Crossfunctional&quot;, 
1090,	&quot;Account Manager - Team BSD&quot;, 
1095,	&quot;Account Manager - Team IPD&quot;, 

Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dept Code Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dept_Code__c</fullName>
        <label>Dept Code #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division2__c</fullName>
        <formula>if( CONTAINS(UserRole.Name, &quot;CC&quot;),&quot;Customer Care&quot;,if(CONTAINS(UserRole.Name, &quot;Sales&quot;),&quot;Sales&quot;,if(CONTAINS(UserRole.Name, &quot;BCS&quot;),&quot;BCS&quot;,if( CONTAINS(UserRole.Name, &quot;Production&quot;),&quot;Production&quot;,&quot;none&quot;))))</formula>
        <label>Division2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>terminated employees last day of employment</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_of_Day_custom__c</fullName>
        <formula>TEXT(EndDay)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End of Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Account_Manager__c</fullName>
        <description>Whether the user is an account manager or not and used for data integration.</description>
        <formula>IF( ( Profile.Name = &apos;Account Manager - Management&apos; || Profile.Name = &apos;Account Manager - Standard&apos;) &amp;&amp; NOT ISPICKVAL(Account_Team__c, &apos;&apos;), True, False)</formula>
        <label>Account Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Supervisor_Text__c</fullName>
        <label>Lead Supervisor</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>RightNow user id</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Login_ID_del__c</fullName>
        <formula>LEFT(Username, FIND(&apos;@&apos;, Username)-1)</formula>
        <label>Login ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager2__c</fullName>
        <formula>Manager.FirstName +&apos; &apos;+Manager.LastName</formula>
        <label>Manager2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Text__c</fullName>
        <label>Manager</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Glendale</fullName>
                </value>
                <value>
                    <fullName>San Francisco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personnel_Team__c</fullName>
        <label>Personnel Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Team Force</fullName>
                </value>
                <value>
                    <fullName>Team Closers</fullName>
                </value>
                <value>
                    <fullName>Team Grind</fullName>
                </value>
                <value>
                    <fullName>Team Steve</fullName>
                </value>
                <value>
                    <fullName>Team Adrian</fullName>
                </value>
                <value>
                    <fullName>Team Corey</fullName>
                </value>
                <value>
                    <fullName>Team Brian</fullName>
                </value>
                <value>
                    <fullName>Team in Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <label>Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Second_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>employee start date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_of_Day_custom__c</fullName>
        <formula>Text( StartDay )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start of Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sykes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sykes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Teams list</description>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abandoner</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Decline</fullName>
                </value>
                <value>
                    <fullName>AS Retention</fullName>
                </value>
                <value>
                    <fullName>RA Renewal</fullName>
                </value>
                <value>
                    <fullName>Inbound PS</fullName>
                </value>
                <value>
                    <fullName>Inbound BIZ and IP</fullName>
                </value>
                <value>
                    <fullName>Biz Mobile</fullName>
                </value>
                <value>
                    <fullName>Alpha Real Estate</fullName>
                </value>
                <value>
                    <fullName>Alpha Retail</fullName>
                </value>
                <value>
                    <fullName>Real Estate &amp; Retail Business Services</fullName>
                </value>
                <value>
                    <fullName>Trademark Services</fullName>
                </value>
                <value>
                    <fullName>Business Starter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title2__c</fullName>
        <formula>if( CONTAINS(UserRole.Name, &quot;Specialist&quot;),&quot;Specialist&quot;,if(CONTAINS(UserRole.Name, &quot;Lead&quot;),&quot;Lead&quot;,if(CONTAINS(UserRole.Name, &quot;Manager&quot;),&quot;Manager&quot;,if(CONTAINS(UserRole.Name, &quot;VP&quot;),&quot;Vice President&quot;,&quot;none&quot;))))</formula>
        <label>Title2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAT_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UAT User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Count__c</fullName>
        <description>Created for reporting purpose Average Emails By Agent</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>Id</formula>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Acct_Mgr</fullName>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Team__c</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
            <value>Business Account Manager</value>
        </filters>
        <label>Acct Mgr</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Acct_Mgr_Missing_Team</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.PHONE</columns>
        <columns>CORE.USERS.EXTENSION</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>Chatter</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Chatter Profile - Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Salesforce</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <label>Active Salesforce</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users_AM</fullName>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>MARKETING_USER</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Account Manager - Standard</value>
        </filters>
        <label>Active Users - AM</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users_OmniGlobe</fullName>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>MARKETING_USER</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.USERNAME</field>
            <operation>contains</operation>
            <value>omniglobe</value>
        </filters>
        <label>Active Users - OmniGlobe</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>System Admin</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TIMEZONE</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users_Activetoday</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>MANAGER</columns>
        <columns>MARKETING_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>6/20/2015 1:00 AM</value>
        </filters>
        <label>Active Users - today</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Austin_Users_not_in_Central_Time_Zone</fullName>
        <columns>FULL_NAME</columns>
        <columns>Office_Location__c</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.ADDRESS_CITY</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>CORE.USERS.ADDRESS_ZIP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ADDRESS_CITY</field>
            <operation>equals</operation>
            <value>Austin</value>
        </filters>
        <filters>
            <field>TIMEZONE</field>
            <operation>notEqual</operation>
            <value>8</value>
        </filters>
        <label>Austin Users not in Central Time Zone</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IAD_Pilot</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>IAD Pilot</value>
        </filters>
        <label>IAD Pilot</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Users</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MARKETING_USER</columns>
        <columns>MOBILE_USER</columns>
        <columns>AVANTGO_USER</columns>
        <columns>SFCONTENT_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Inactive Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sales_Manager</fullName>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Account_Team__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>CC</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Sales Manager</label>
        <language>en_US</language>
        <sharedTo>
            <role>SalesforceSupport296281</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UAT_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UAT_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>UAT Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>